Additional helper methods

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -136,3 +136,4 @@ log_tasks           = false
 log_rpc             = false
 log_afk             = false
 log_connection      = false
+log_migration       = false
