added cmake option to enable/disable building client patch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ option(ENABLE_SCRIPTING_ENGINE "Build experimental scripting engine ?" ON)
 option(ENABLE_TESTS "Enable testing unit and functional tests" OFF)
 option(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
 option(BUILD_RPC_TEST_CLIENT "Build RPC Test Client ?" OFF)
+option(BUILD_CLIENT_PATCH "Build client patch for AMD graphics cards ?" OFF)
 
 ########################################################################################
 # Prerequisites
