Animation engine support:
* Add `AnimTrack` and `BoneLink` structs.
* Add `getTrackForBone` which queries the `HAnimationTrack` for bone's `BoneAnimTrack`
* Add `AnimationEngine` singelton class
* PrefabStore now holds the base path itself.

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -35,6 +35,7 @@ SET(target_CPP
     ${CMAKE_CURRENT_SOURCE_DIR}/anim_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/bodypart_definitions.cpp
     # Resource file formats
+    ${CMAKE_CURRENT_SOURCE_DIR}/anim_definitions.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/attrib_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/bodypart_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/scenegraph_serializers.cpp
