Introduce Sequencer support.
A few bits are still missing ( notably, fx bound to sequencers )

--- a/Projects/CoX/Common/Runtime/CMakeLists.txt
+++ b/Projects/CoX/Common/Runtime/CMakeLists.txt
@@ -13,6 +13,8 @@ set(COMMON_RUNTIME_SRC
     RuntimeData.h
     SceneGraph.h
     SceneGraph.cpp
+    Sequencer.cpp
+    Sequencer.h
     Texture.cpp
     Texture.h
 )
