Allow appveyor.yml to provide a specific path to Qt

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ matrix:
 before_build:
 - if exist "%QT5%" set Path=%QT5%\bin;%Path%
 - md build
-- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" "-DCMAKE_PREFIX_PATH=%QT5%"
+- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" "-DQT_GIVEN_PATH:STRING=%QT5%" "-DCMAKE_PREFIX_PATH=%QT5%"
 - call "%VCVARS%"
 - lib /def:Projects\CoX\Clients\patch_tools\CityOfX.def /OUT:Projects/CoX/Clients/patch_tools/CityOfX.lib
 build_script:
