--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,13 @@ matrix:
   include:
     - os: linux
       dist: bionic
-      env: BUILD='Debug' GCC=9
+      env: BUILD='Debug'
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
       before_install:
         - curl -L https://github.com/Kitware/CMake/releases/download/v3.16.4/cmake-3.16.4-Linux-x86_64.tar.gz -o cmake-3.16.4-Linux-x86_64.tar.gz
         - tar xf cmake-3.16.4-Linux-x86_64.tar.gz
