--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,12 +30,16 @@ clone_depth: 5
 matrix:
   fast_finish: false # set this flag to immediately finish build once one of the jobs fails.
 
-before_build:
-- if exist "%QT5%" set Path=%QT5%\bin;%Path%
-- md build
-- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" "-DQT_GIVEN_PATH:STRING=%QT5%" "-DCMAKE_PREFIX_PATH=%QT5%"
+init:
+- call "%QT5%\bin\qtenv2.bat"
 - call "%VCVARS%"
+
+before_build:
+- if exist "%QT5%" set PATH=%QT5%\bin;%PATH%
+- md build
+- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" -DQT_GIVEN_PATH:STRING="%QT5%" "-DCMAKE_PREFIX_PATH=%QT5%"
 - lib /def:Projects\CoX\Clients\patch_tools\CityOfX.def /OUT:Projects/CoX/Clients/patch_tools/CityOfX.lib
+
 build_script:
 - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
 - cmake --build build --config "%CONFIGURATION%" -- %MSBUILD_FLAGS%
