--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,28 @@ env:
     - CCACHE_COMPRESS=1
     - CASHER_TIME_OUT=1000
     - QT=512
-    
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main'
+      key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+    - sourceline: 'ppa:ubuntu-toolchain-r/test'
+    packages:
+    - cmake
+    - gcc-9
+    - g++-9
+    - ninja-build
+  homebrew:
+    packages:
+    - cmake
+    - gcc@9
+    - llvm@9
+    - ninja
+    - qt
+    - cppcheck
+    update: true
+
 addons_shortcuts:
   addons_clang50: &clang50
     apt:
@@ -51,6 +72,9 @@ matrix:
           packages:
             - g++-9
       before_install:
+        - sudo add-apt-repository -y ppa:beineri/opt-qt-5.12.6-bionic
+        - sudo apt-get -q update
+        - sudo apt-get install -qq libgl1-mesa-dev qt512base qt512declarative qt512websockets qt512quickcontrols2
         - curl -L https://github.com/Kitware/CMake/releases/download/v3.16.4/cmake-3.16.4-Linux-x86_64.tar.gz -o cmake-3.16.4-Linux-x86_64.tar.gz
         - tar xf cmake-3.16.4-Linux-x86_64.tar.gz
         - export PATH=${PWD}/cmake-3.16.4-Linux-x86_64/bin:${PATH}
@@ -61,27 +85,19 @@ matrix:
       env: BUILD='Debug'
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.2-xenial -y; fi
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo apt-get update -qq;
     else
       brew update;
     fi
-#  - if [ -n "$CLANG_VERSION" ]; then sudo PATH="${PATH}" CXX="$CXX" CC="$CC" ./ci_support/install_libcxx.sh; fi
   
 install:
-#  - |
-#    if [ "$LIBCXX" == "On" ]; then
-#      CXX_FLAGS="${CXX_FLAGS} -stdlib=libc++ -nostdinc++ -cxx-isystem /usr/include/c++/v1/ -Wno-unused-command-line-argument";
-#      CXX_LINKER_FLAGS="${CXX_LINKER_FLAGS} -lc++abi";
-#    fi
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sudo apt-get install -qq libgl1-mesa-dev qt512base qt512declarative qt512websockets qt512quickcontrols2; source /opt/qt512/bin/qt512-env.sh;
+      source /opt/qt512/bin/qt512-env.sh;
       CMAKE_OPTS="";
     else
-      brew install cppcheck qt;
       brew link --force qt;
       export PATH="/usr/local/opt/qt/bin:$PATH" # missing mkspecs fix
       QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake);
