Update ACE to 6.5.7 + a test of including the editor_engine reference in the build.

--- a/Projects/CoX/CMakeLists.txt
+++ b/Projects/CoX/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(Common)
 
 ADD_SUBDIRECTORY(Common)
 ADD_SUBDIRECTORY(Utilities)
+ADD_SUBDIRECTORY(Editor)
 ADD_SUBDIRECTORY(Servers)
 ADD_SUBDIRECTORY(Clients)
 
