--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ doxygen/
 out/
 3rd_party/include
 3rd_party/lib
+3rd_party/prebuilt
 3rd_party/bin
 3rd_party/gmock
 3rd_party/naked_ace/
+Temp/
 
 #IDE generated project files
 *.user
