--- a/Projects/CoX/Clients/CMakeLists.txt
+++ b/Projects/CoX/Clients/CMakeLists.txt
@@ -7,4 +7,4 @@ else()
     MESSAGE("Client_I0 should be compiled separately, since it has to be 32bit, and Your build is 64bit")
 endif()
 endif()
-add_subdirectory(Client)
+#add_subdirectory(Client)
