Fix linux build by disabling editor.

--- a/Projects/CoX/Editor/CMakeLists.txt
+++ b/Projects/CoX/Editor/CMakeLists.txt
@@ -1,6 +1,9 @@
 if(MSVC)
 
 check_and_update_binary_deps(SegsEngine SegsEngine ${PROJECT_SOURCE_DIR}/3rd_party/prebuilt 4.0.0.1-alpha)
+else()
+    # TODO: DISABLED editor in linux until we have SegsEngine integrated as a built dependency.
+    return()
 endif()
 
 find_package(SegsEngine REQUIRED)
