--- a/Projects/CoX/Editor/CMakeLists.txt
+++ b/Projects/CoX/Editor/CMakeLists.txt
@@ -3,7 +3,9 @@ if(MSVC)
 check_and_update_binary_deps(SegsEngine SegsEngine ${PROJECT_SOURCE_DIR}/3rd_party/prebuilt 4.0.0.3-alpha)
 else()
     # TODO: DISABLED editor in linux until we have SegsEngine integrated as a built dependency.
-    return()
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/3rd_party/prebuilt/include")
+        return()
+    endif()
 endif()
 
 find_package(SegsEngine REQUIRED)
