--- a/Projects/CoX/Servers/GameServer/ClientOptionService/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/ClientOptionService/CMakeLists.txt
@@ -14,6 +14,7 @@ ${target_CPP}
 ${target_INCLUDE}
 )
 add_handler(ClientOptionService ${target_SOURCES})
+add_messages_library(ClientOptionService ${SOURCES})
 target_link_libraries(ClientOptionService PUBLIC Qt5::Core gameData)
 target_link_libraries(ClientOptionService INTERFACE SEGS_Components )
 
