--- a/Projects/CoX/Common/Runtime/CMakeLists.txt
+++ b/Projects/CoX/Common/Runtime/CMakeLists.txt
@@ -17,6 +17,8 @@ set(COMMON_RUNTIME_SRC
     Sequencer.h
     Texture.cpp
     Texture.h
+    Systems/FXSystem.cpp
+    Systems/FXSystem.h
 )
 add_library(common_runtime STATIC ${COMMON_RUNTIME_SRC})
 add_dependencies(common_runtime gameData)
