--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,6 @@ image: Visual Studio 2019
 platform: x64
 
 environment:
-  MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
   matrix:
   - CMAKE_GENERATOR: "NMake Makefiles JOM"
     QT5: C:\Qt\5.15\msvc2019_64
@@ -33,11 +32,11 @@ init:
 before_build:
 - if exist "%QT5%" set PATH=%QT5%\bin;%PATH%;C:\Qt\Tools\QtCreator\bin
 - md build
-- cmake -H. -Bbuild -G "%CMAKE_GENERATOR%" -DQT_GIVEN_PATH:STRING="%QT5%" "-DCMAKE_PREFIX_PATH=%QT5%"
+- cmake  -H. -Bbuild -G "%CMAKE_GENERATOR%" -DQT_GIVEN_PATH:STRING="%QT5%" "-DCMAKE_PREFIX_PATH=%QT5%"
 
 build_script:
 - if "%APPVEYOR_REPO_TAG%"=="true" (set CONFIGURATION=RelWithDebInfo) else (set CONFIGURATION=Debug)
-- cmake --build build --config "%CONFIGURATION%" -- %MSBUILD_FLAGS%
+- cmake --build build  -j %NUMBER_OF_PROCESSORS% --config "%CONFIGURATION%"
 
 #after_build:
 #- cmake --build build --config "%CONFIGURATION%" --target check -- %MSBUILD_FLAGS%
