Re-enable editor build
Use binaries from github, fix geo importer to conform to new class
names.

--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -20,3 +20,4 @@ endif()
 include(ExternalProject_LUA.cmake)
 include(ExternalProject_SOL2.cmake)
 include(ExternalProject_JCON.cmake)
+include(ExternalProject_SegsEngine.cmake)
