--- a/Servers/MapServer/ScriptingEngine/CMakeLists.txt
+++ b/Servers/MapServer/ScriptingEngine/CMakeLists.txt
@@ -17,15 +17,15 @@ SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
 SET (target_SOURCES
-${target_CPP}
-${target_INCLUDE}
+    ${target_CPP}
+    ${target_INCLUDE}
 )
 
 add_library(ScriptingEngine ${target_SOURCES})
 target_link_libraries(ScriptingEngine PUBLIC Qt5::Core gameData)
 
 target_compile_definitions(ScriptingEngine PUBLIC -DSCRIPTING_ENABLED=1)
-target_link_libraries(ScriptingEngine INTERFACE lua_IMP sol2_IMP)
+target_link_libraries(ScriptingEngine PUBLIC lua_IMP sol2)
 
 if(ENABLE_TESTS)
 #    add_subdirectory(UnitTests)
