--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(TextureConverter)
 add_subdirectory(dbtool)
 add_subdirectory(AuthExerciser)
 add_subdirectory(SEGSAdmin)
+add_subdirectory(EditorComponets/)
 IF(BUILD_RPC_TEST_CLIENT)
   add_subdirectory(RPCTestClient)
 ENDIF(BUILD_RPC_TEST_CLIENT)
