--- a/Servers/MapServer/CMakeLists.txt
+++ b/Servers/MapServer/CMakeLists.txt
@@ -50,7 +50,9 @@ target_link_libraries(MapServer PUBLIC CRUDP_Protocol common_runtime)
 target_link_libraries(MapServer PUBLIC Qt5::Core)
 target_link_libraries(MapServer PUBLIC gameData)
 
-add_subdirectory(ScriptingEngine)
+if(ENABLE_SCRIPTING_ENGINE)
+    add_subdirectory(ScriptingEngine)
+endif()
 add_subdirectory(SlashCommands)
 
 target_link_libraries(MapServer PUBLIC Qt5::Core)
