--- a/.github/workflows/SegsNightlyRelease.yaml
+++ b/.github/workflows/SegsNightlyRelease.yaml
@@ -1,11 +1,9 @@
 name: segs-ci-nightly
 
-on:
-  workflow_dispatch
 
-#on:
-#  schedule:
-#    - cron: '30 16 * * *'
+on:
+  schedule:
+    - cron: '0 17 * * *'
 
 env:
   BUILD_TYPE:  Debug
