Remove CRON schedule for nightly and only run on push to develop

--- a/.github/workflows/SegsNightlyRelease.yaml
+++ b/.github/workflows/SegsNightlyRelease.yaml
@@ -2,8 +2,9 @@ name: segs-ci-nightly
 
 
 on:
-  schedule:
-    - cron: '0 19 * * *'
+  push:
+    branches:
+      - develop
 
 env:
   BUILD_TYPE:  Debug
