Change TheDoctor0/zip-release to use branch main instead of master (#956)
* Change TheDoctor0/zip-release to use branch main instead of master

* Remove CRON schedule for nightly and only run on push to develop

--- a/.github/workflows/SegsNightlyRelease.yaml
+++ b/.github/workflows/SegsNightlyRelease.yaml
@@ -2,8 +2,9 @@ name: segs-ci-nightly
 
 
 on:
-  schedule:
-    - cron: '0 19 * * *'
+  push:
+    branches:
+      - develop
 
 env:
   BUILD_TYPE:  Debug
@@ -61,7 +62,7 @@ jobs:
         robocopy ${{ github.workspace }}\build\openssl\openssl-1.1\x64\bin\ ${{ github.workspace }}\build\out *.dll
 
     - name: Create Windows Archive
-      uses: thedoctor0/zip-release@master
+      uses: thedoctor0/zip-release@main
       with: 
         type: 'zip'
         directory: ${{ github.workspace }}/build/out
@@ -109,7 +110,7 @@ jobs:
       run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
 
     - name: Create Linux Archive
-      uses: thedoctor0/zip-release@master
+      uses: thedoctor0/zip-release@main
       with: 
         type: 'zip'
         directory: ${{ github.workspace }}/build/out
@@ -156,7 +157,7 @@ jobs:
       run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
 
     - name: Create MacOS Archive
-      uses: thedoctor0/zip-release@master
+      uses: thedoctor0/zip-release@main
       with: 
         type: 'zip'
         directory: ${{ github.workspace }}/build/out
