semi-final changes/updates to CoH plugins

--- a/Editor/plugins/formats/CMakeLists.txt
+++ b/Editor/plugins/formats/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(texture)
+#add_subdirectory(image)
 add_subdirectory(model)
 add_subdirectory(scene)
-#add_subdirectory(resource)
+add_subdirectory(texture)
