--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -20,4 +20,6 @@ endif()
 include(ExternalProject_LUA.cmake)
 include(ExternalProject_SOL2.cmake)
 include(ExternalProject_JCON.cmake)
-#include(ExternalProject_SegsEngine.cmake) Temporarily commented out as failing to build
+if(BUILD_EDITOR)
+include(ExternalProject_SegsEngine.cmake)
+endif()
