--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(plugins)
 
 set(SOURCES
     AuthClient.h
-    AuthClient.cpp
+    #AuthClient.cpp
     main.cpp
     os_specific/app.rc
 )
